--- a/css/styles.css
+++ b/css/styles.css
@@ -208,3 +208,33 @@ a.custom-card:hover {
   width: 10px;
   box-sizing: initial;
 } */
+
+#fotoTable{
+ width: 100px;
+ 
+}
+
+.probando2{
+  width: 100px;
+}
+
+/* #nombreTable {
+  padding: 10%;
+} */
+
+th {
+  width: 3%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+/* input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+} */
+
+/* Firefox */
+/* input[type=number] {
+  -moz-appearance: textfield;
+} */
+
