--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,10 @@ th {
   width: 3%;
 }
 
+#imagenPerfil{
+  width: 50%;
+}
+
 /* Chrome, Safari, Edge, Opera */
 /* input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
