Mejora imagen en perfil

--- a/css/styles.css
+++ b/css/styles.css
@@ -226,8 +226,9 @@ th {
   width: 3%;
 }
 
-#imagenPerfil{
-  width: 50%;
+#miFotoNueva{
+  width: 20%;
+  height: 20%;
 }
 
 /* Chrome, Safari, Edge, Opera */
